// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layer renders correctly 1`] = `
<div
  className="layer layer-test closed"
>
  <header
    className="layer-header"
  >
    <h2
      className="layer-headline"
    >
      {{de:layer_test_headline}}
    </h2>
    <button
      className="header-button close-button"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "preventDefault": [MockFunction],
              },
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      tabIndex="-1"
    >
      <Icon
        id="close"
      />
    </button>
  </header>
  test
</div>
`;

exports[`Layer renders correctly with id only 1`] = `
<div
  className="layer layer-test closed"
>
  <header
    className="layer-header"
  >
    <h2
      className="layer-headline"
    >
      {{de:layer_test_headline}}
    </h2>
    <button
      className="header-button close-button"
      onClick={[MockFunction]}
      tabIndex="-1"
    >
      <Icon
        id="close"
      />
    </button>
  </header>
</div>
`;
